--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title></title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+
 </head>
-<body></body>
+<body>
+	<div class="container">
+		<div class="row">
+			<div class="col">1</div>
+			<div class="col">2</div>
+		</div>
+	</div>
+
+</body>
 </html>
