--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@
 
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col">1</div>
-			<div class="col">2</div>
-		</div>
+<head class="container">
+	<div class="container header"></div>  <!-- верхня полоска -->
+	<div class="menu">
+		<nav>
+			<ul>
+				<li><a href="#">Магазин</a></li>
+				<li><a href="#">Доставка та оплата</a></li>
+				<li><a href="#">Модницам</a></li>
+				<li><a href="#">Новинки</a></li>
+				<li><a href="#">контакти</a></li>
+			</ul>
+		</nav>
 	</div>
+	<div class="content-header">
+		<div class="phones"></div>
+		<img src="" alt="">
+		<input type="text">
+		<div class="basket"></div>
+	</div>
+</head>
 
 </body>
 </html>
