--- a/index.html
+++ b/index.html
@@ -2,46 +2,58 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title></title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.cs">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+
+
+
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </head>
 
 <body>
 <header class="container">
-	<div class="menu row justify-content-between align-items-start">
-		<!--Лівий список -->
-		<div class="col-lg-7 col-md-8 ">
-			<ul>
-				<li><a href="#">Магазин<i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
-				<li><a href="#">Доставка та оплата
-<i class="fa fa-truck" aria-hidden="true"></i>
-</a></li>
-				<li><a href="#">Модницам <i class="fa fa-star" aria-hidden="true"></i></a></li>
-				<li><a href="#">Новинки <i class="fa fa-newspaper-o" aria-hidden="true"></i></a></li>
-				<li><a href="#">Контакти <i class="fa fa-address-card-o" aria-hidden="true"></i></a></li>
-			</ul>
-		</div>
-		<!--Правий список -->
-		<div class="col-lg-3 col-md-4">
-			<ul>
-				<li><a href="#">Список бажань <i class="fa fa-star-o" aria-hidden="true"></i></a></li>
-				<li><a href="#">Увійти <i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
-			</ul>
-		</div>
-	</div>
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color: #d573bf">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Магазин <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Доставка та оплата <i class="fa fa-truck" aria-hidden="true"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Новинки <i class="fa fa-newspaper-o" aria-hidden="true"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Контакти <i class="fa fa-address-card-o" aria-hidden="true"></i></a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Пошук...">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Пошук</button>
+    </form>
+  </div>
+</nav>
 
 
-
-
-	<div class="content-header row">
-		<div class="phones"></div>
-		<img src="" alt="">
-		<input type="text">
-		<div class="basket"></div>
-	</div>
 </header>
 
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
