--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Магазин <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#">dМагазин <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Доставка та оплата <i class="fa fa-truck" aria-hidden="true"></i></a>
