--- a/index.html
+++ b/index.html
@@ -4,37 +4,30 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Shop-Shop</title>
+	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
-<header class="container">
-	<nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color: rgba(223, 77, 156, 0.0)">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Магазин <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Доставка та оплата <i class="fa fa-truck" aria-hidden="true"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Новинки <i class="fa fa-newspaper-o" aria-hidden="true"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Контакти <i class="fa fa-address-card-o" aria-hidden="true"></i></a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Пошук...">
-    </form>
-  </div>
-</nav>
+	<nav class="navbar navbar-expand-md navbar-light" style="background-color: rgba(121, 0, 0, 0);">
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	    <div class="navbar-nav">
+	      <a class="nav-item nav-link active text-dark" href="#">Магазин<span class="sr-only">(current)</span></a>
+	      <a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
+	      <a class="nav-item nav-link text-dark" href="#">Новинки</a>
+	      <a class="nav-item nav-link text-dark" href="#">Контакти</a>
+	      <a class="nav-item nav-link text-dark" href="#">Увійти</a>
+	    </div>
+	    <div class="navbar-nav ml-auto">
+	      <a class="nav-item nav-link text-dark" href="#">Контакти</a>
+	      <a class="nav-item nav-link text-dark" href="#">Увійти</a>
+	    </div>
+	  </div>
+	</nav>
 
 
 </header>
