--- a/index.html
+++ b/index.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width">
 	<title>Shop-Shop</title>
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
-<body>
-	<nav class="navbar navbar-expand-md navbar-light" style="background-color: rgba(121, 0, 0, 0);">
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	    <div class="navbar-nav">
-	      <a class="nav-item nav-link active text-dark" href="#">Магазин<span class="sr-only">(current)</span></a>
-	      <a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
-	      <a class="nav-item nav-link text-dark" href="#">Новинки</a>
-	      <a class="nav-item nav-link text-dark" href="#">Контакти</a>
-	      <a class="nav-item nav-link text-dark" href="#">Увійти</a>
-	    </div>
-	    <div class="navbar-nav ml-auto">
-	      <a class="nav-item nav-link text-dark" href="#">Контакти</a>
-	      <a class="nav-item nav-link text-dark" href="#">Увійти</a>
-	    </div>
-	  </div>
+
+<body class="container">
+	<nav class="navbar navbar-expand-md navbar-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
+				<a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
+				<a class="nav-item nav-link text-dark" href="#">Новинки</a>
+				<a class="nav-item nav-link text-dark" href="#">Контакти</a>
+			</div>
+
+			<div class="navbar-nav ml-auto">
+				<a class="nav-item nav-link text-dark" href="#">Сподобалось</a>
+				<a class="nav-item nav-link text-dark" href="#">Увійти</a>
+			</div>
+			<div class="btn-group btn-group-sm " role="group">
+				<button type="button" class="btn btn-secondary btn-sm" id="ua">УКР</button>
+				<button type="button" class="btn btn-secondary btn-sm" id="ru">РУС</button>
+			</div>
+		</div>
 	</nav>
 
 
-</header>
+	</header>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
+
 </html>
