--- a/index.html
+++ b/index.html
@@ -35,7 +35,24 @@
 			</div>
 		</div>
 	</nav>
-
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 phone">
+				<img src="img/phone-icon.png" alt="Phone">
+				<ul>
+					<li>
+						<a href="callto:+380930809857">380930809857</a>
+					</li>
+					<li>
+						<a href="callto:+380930809857">380930809857</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-3">2</div>
+			<div class="col-md-3">3</div>
+			<div class="col-md-2">4</div>
+		</div>
+	</div>
 
 	</header>
 
