--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container head">
 		<div class="row">
-			<div class="col-md-4 phone">
-				<img src="img/phone-icon.png" alt="Phone">
-				<ul>
-					<li>
-						<a href="callto:+380930809857">380930809857</a>
-					</li>
-					<li>
-						<a href="callto:+380930809857">380930809857</a>
-					</li>
-				</ul>
+			<div class="col-md-3 bloc1">
+
 			</div>
-			<div class="col-md-3">2</div>
-			<div class="col-md-3">3</div>
-			<div class="col-md-2">4</div>
+			<div class="col-md-3 bloc2">
+
+			</div>
+			<div class="col-md-3 bloc3">
+
+			</div>
+			<div class="col-md-3 cart">
+				<span class="badge badge-success">3</span>
+				<img src="img\cart.png" alt="">
+
+			</div>
 		</div>
 	</div>
 
