--- a/index.html
+++ b/index.html
@@ -30,26 +30,35 @@
 				<a class="nav-item nav-link text-dark" href="#">Увійти</a>
 			</div>
 			<div class="btn-group btn-group-sm " role="group">
-				<button type="button" class="btn btn-secondary btn-sm" id="ua">УКР</button>
-				<button type="button" class="btn btn-secondary btn-sm" id="ru">РУС</button>
+				<label class="btn btn-secondary">
+					<button type="button" class="btn btn-secondary btn-sm" id="ua">УКР</button>
+				</label>
+				<label class="btn btn-secondary">
+					<button type="button" class="btn btn-secondary btn-sm" id="ru">РУС</button>
+				</label>
 			</div>
 		</div>
 	</nav>
 	<div class="container head">
 		<div class="row">
-			<div class="col-md-3 bloc1">
+			<div class="col-xl-3 col-lg-3 col-md-0 col-sm-0 col-0 bloc1">
 
 			</div>
-			<div class="col-md-3 bloc2">
+			<div class="col-xl-3 col-lg-2 col-md-0 col-sm-0 col-0 bloc2">
 
 			</div>
-			<div class="col-md-3 bloc3">
-
+			<div class="col-xl-5 col-lg-5 col-md-9 col-sm-8 col-8 align-self-center bloc3">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
+					<span class="input-group-btn">
+        				<button class="btn btn-secondary" type="button">Пошук</button>
+     				</span>
+				</div>
 			</div>
-			<div class="col-md-3 cart">
+			<div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 text-center cart">
 				<span class="badge badge-success">3</span>
-				<img src="img\cart.png" alt="">
-
+				<img class="img-fluid" src="img/cart.png" alt="" href="#">
+				<p>Корзина</p>
 			</div>
 		</div>
 	</div>
