--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Shop-Shop</title>
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-media.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
