--- a/index.html
+++ b/index.html
@@ -42,13 +42,10 @@
 	</nav>
 	<div class="container head">
 		<div class="row">
-			<div class="col-xl-3 col-lg-3 col-md-0 col-sm-0 col-0 bloc1">
-
+			<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  bloc1">
+				<img src="img/icon.png" alt="">
 			</div>
-			<div class="col-xl-3 col-lg-2 col-md-0 col-sm-0 col-0 bloc2">
-
-			</div>
-			<div class="col-xl-5 col-lg-5 col-md-9 col-sm-9 col-9 align-self-center bloc3">
+			<div class="col-xl-7 col-lg-7 col-md-8 col-sm-8 col-8 align-self-center order-2 order-md-2 bloc2">
 				<div class="input-group">
 					<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
 					<span class="input-group-btn">
@@ -56,8 +53,13 @@
      				</span>
 				</div>
 			</div>
-			<div class="col-xl-1 col-lg-2 col-md-3 col-sm-3 col-3 text-center cart">
+			<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 text-center order-3 order-md-3 bloc3">
 				<span class="badge badge-success">3</span>
+				<img class="img-fluid" src="img/heart.png" alt="" href="#">
+				<p>Сподобалось</p>
+			</div>
+			<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 order-4 order-md-4  text-center cart">
+				<span class="badge badge-success">1</span>
 				<img class="img-fluid" src="img/cart.png" alt="" href="#">
 				<p>Корзина</p>
 			</div>
