--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">dМагазин <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#">Магазин</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Доставка та оплата <i class="fa fa-truck" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#">Доставка та оплата</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Новинки <i class="fa fa-newspaper-o" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#">Новинки 	</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Контакти <i class="fa fa-address-card-o" aria-hidden="true"></i></a>
+        <a class="nav-link" href="#">Контакти</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
