--- a/index.html
+++ b/index.html
@@ -11,62 +11,67 @@
 	<link rel="stylesheet" href="css/style-media.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<script type="text/javascript" href="js/javascript.js"></script>
+	<script type="text/javascript" href="js/bodstsrap.min.js"></script>
+
 </head>
-
-<body class="container">
-	<nav class="navbar navbar-expand-md navbar-light">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="navbar-nav">
-				<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
-				<a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
-				<a class="nav-item nav-link text-dark" href="#">Новинки</a>
-				<a class="nav-item nav-link text-dark" href="#">Контакти</a>
-			</div>
-
-			<div class="navbar-nav ml-auto">
-				<a class="nav-item nav-link text-dark" href="#">Сподобалось</a>
-				<a class="nav-item nav-link text-dark" href="#">Увійти</a>
-			</div>
-			<div class="btn-group btn-group-sm " role="group">
-				<label class="btn btn-secondary">
-					<button type="button" class="btn btn-secondary btn-sm" id="ua">УКР</button>
-				</label>
-				<label class="btn btn-secondary">
-					<button type="button" class="btn btn-secondary btn-sm" id="ru">РУС</button>
-				</label>
-			</div>
-		</div>
-	</nav>
-	<div class="container head">
-		<div class="row">
-			<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  bloc1">
-				<img src="img/icon.png" alt="">
-			</div>
-			<div class="col-xl-7 col-lg-7 col-md-8 col-sm-8 col-8 align-self-center order-2 order-md-2 bloc2">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
-					<span class="input-group-btn">
-        				<button class="btn btn-secondary" type="button">Пошук</button>
-     				</span>
+<body>
+	<header class="container">
+		<nav class="navbar navbar-expand-md navbar-light">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav">
+					<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
+					<a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
+					<a class="nav-item nav-link text-dark" href="#">Новинки</a>
+					<a class="nav-item nav-link text-dark" href="#">Контакти</a>
+				</div>
+				<div class="navbar-nav ml-auto">
+					<a class="nav-item nav-link text-dark" href="#">Сподобалось</a>
+					<a class="nav-item nav-link text-dark" href="#">Увійти</a>
+				</div>
+				<div class="btn-group btn-group-sm " role="group">
+					<label class="btn btn-secondary">
+						<button type="button" class="btn btn-secondary btn-sm" id="ua">УКР</button>
+					</label>
+					<label class="btn btn-secondary">
+						<button type="button" class="btn btn-secondary btn-sm" id="ru">РУС</button>
+					</label>
 				</div>
 			</div>
-			<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 text-center order-3 order-md-3 bloc3">
-				<span class="badge badge-success">3</span>
-				<img class="img-fluid" src="img/heart.png" alt="" href="#">
-				<p>Сподобалось</p>
+		</nav>
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
+					<img src="img/icon.png" alt="">
+				</div>
+				<div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-8 align-self-center order-2 order-md-2 bloc2">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
+						<span class="input-group-btn">
+							<button class="btn btn-secondary" type="button">Пошук</button>
+						</span>
+					</div>
+				</div>
+				<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 order-3 order-md-3 text-center heart">
+					<span class="badge badge-success">3</span>
+					<img class="img-fluid" src="img/heart.png" alt="" href="#">
+					<p>Сподобалось</p>
+				</div>
+				<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 order-4 order-md-4 text-center cart">
+					<span class="badge badge-success">1</span>
+					<img class="img-fluid" src="img/cart.png" alt="" href="#">
+					<p>Корзина</p>
+				</div>
 			</div>
-			<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 order-4 order-md-4  text-center cart">
-				<span class="badge badge-success">1</span>
-				<img class="img-fluid" src="img/cart.png" alt="" href="#">
-				<p>Корзина</p>
-			</div>
-		</div>
-	</div>
+			<script type="text/javascript">
 
+			</script>
+		</div>
 	</header>
+
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
