--- a/index.html
+++ b/index.html
@@ -40,6 +40,91 @@
 
 
 </header>
+<footer class="footer1">
+	<div class="container">
+
+		<div class="row">
+			<!-- row -->
+
+			<div class="col-lg-3 col-md-3">
+				<!-- widgets column left -->
+				<ul class="list-unstyled clear-margins">
+					<!-- widgets -->
+
+					<li class="widget-container widget_nav_menu">
+						<!-- widgets list -->
+
+						<h1 class="title-widget">Каталог</h1>
+
+						<ul>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Головні убори</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Аксесуари</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Жіночий одяг</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Жіноче взуття</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Розпродаж</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+
+
+			<div class="col-lg-3 col-md-3">
+				<!-- widgets column left -->
+				<ul class="list-unstyled clear-margins">
+					<!-- widgets -->
+
+					<li class="widget-container widget_nav_menu">
+						<!-- widgets list -->
+
+						<h1 class="title-widget">Про нас</h1>
+
+						<ul>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Магазин</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Модницям</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Новини</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Доставка та оплата</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Контакти</a></li>
+							<li><a href="#"><i class="fa fa-angle-double-right"></i> Карта сайта</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+
+				<div class="col-lg-3 col-md-3">
+					<!-- widgets column center -->
+					<ul class="list-unstyled clear-margins">
+						<!-- widgets -->
+						<li class="widget-container widget_recent_news">
+							<!-- widgets list -->
+							<h1 class="title-widget">Наші контакти </h1>
+							<div class="footerp">
+								<p><b>Email :</b> <a href="mailto:brendemoziy@yandex.ru">brendemoziy@yandex.ru</a></p>
+								<p><b>Оператор </b>
+									<b style="color:rgba(9, 9, 9, 0.29)">(8AM to 10PM):</b> +380502232658 </p>
+								</div>
+<div class="social-icons">
+<ul class="nomargin">
+	<a href="#"><i class="fa fa-facebook-square fa-3x social-fb" id="social"></i></a>
+						<a href="#"><i class="fa fa-twitter-square fa-3x social-tw" id="social"></i></a>
+						<a href="#"><i class="fa fa-google-plus-square fa-3x social-gp" id="social"></i></a>
+						<a href="#"><i class="fa fa-envelope-square fa-3x social-em" id="social"></i></a>
+					</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</footer>
+<!--header-->
+<div class="footer-bottom">
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+			<div class="copyright">
+				© 2017 Усі права захищені
+				</div>
+				</div>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
