--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			<div class="row">
 				<!-- row -->
 
-				<div class="col-lg-3 col-md-3">
+				<div class="box 1 mq-block mq-w-768 mq-max">
 					<!-- widgets column left -->
 					<ul class="list-unstyled clear-margins">
 						<!-- widgets -->
@@ -182,7 +182,7 @@
 				</div>
 
 
-				<div class="col-lg-3 col-md-3">
+				<div class="box 2 mq-block mq-w-768 mq-max">
 					<!-- widgets column left -->
 					<ul class="list-unstyled clear-margins">
 						<!-- widgets -->
