--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+<div class="wrapper">
+
+
+
 	<header class="container">
 		<nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color: rgba(223, 77, 156, 0.0)">
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +44,10 @@
 
 		</nav>
 	</header>
+<!-- <hr color="red"	> -->
+
 	<footer class="footer1">
+		<hr color="rgb(51, 24, 139)">
 		<div class="container">
 
 			<div class="row">
@@ -114,7 +122,7 @@
 </div>
 </div>
 </div>
-</footer>
+<!-- </footer> -->
 <!--header-->
 <div class="footer-bottom">
 	<div class="container">
@@ -124,8 +132,7 @@
 					© 2017 Усі права захищені
 					</div>
 					</div>
-
-
+</footer>
 
 
 
@@ -136,6 +143,6 @@
 									<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 									<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 									<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+</div>
 </body>
-
 </html>
