--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- <hr color="red"	> -->
 
 	<footer class="footer1">
-		<hr color="rgb(51, 24, 139)">
+		<hr color="blue">
 		<div class="container">
 
 			<div class="row">
