--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
 	<footer class="footer1">
 		<hr color="blue">
+		<div class="navbar-fixed-bottom row-fluid">
+			<div class="navbar-inner">
 		<div class="container">
 
 			<div class="row ">
@@ -132,6 +134,8 @@
 					© 2017 Усі права захищені
 					</div>
 					</div>
+				</div>
+				</div>
 </footer>
 
 
