--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
-<body>
+<!-- <body> -->
 
 <div class="wrapper">
 
@@ -44,27 +44,19 @@
 
 		</nav>
 	</header>
-<!-- <hr color="red"	> -->
-
 	<footer class="footer1">
+	<body>
 		<hr color="blue">
-		<div class="navbar-fixed-bottom row-fluid">
-			<div class="navbar-inner">
 		<div class="container">
-
-			<div class="row ">
-				<!-- row -->
+			<div class="row">
 
 				<div class="col-lg-3 col-md-3">
 					<!-- widgets column left -->
 					<ul class="list-unstyled clear-margins">
 						<!-- widgets -->
-
 						<li class="widget-container widget_nav_menu">
 							<!-- widgets list -->
-
 							<h1 class="title-widget">Каталог</h1>
-
 							<ul>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Головні убори</a></li>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Аксесуари</a></li>
@@ -77,16 +69,15 @@
 				</div>
 
 
-				<div class="col-lg-3 col-md-3">
+				<!-- <div class="col-lg-3 col-md-3"> -->
+				<div class="box-3">
+					<div class="inside-padd">
 					<!-- widgets column left -->
 					<ul class="list-unstyled clear-margins">
 						<!-- widgets -->
-
 						<li class="widget-container widget_nav_menu">
 							<!-- widgets list -->
-
 							<h1 class="title-widget">Про нас</h1>
-
 							<ul>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Магазин</a></li>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Модницям</a></li>
@@ -98,7 +89,7 @@
 						</li>
 					</ul>
 				</div>
-
+			</div>
 					<div class="col-lg-3 col-md-3">
 						<!-- widgets column center -->
 						<ul class="list-unstyled clear-margins">
@@ -111,6 +102,7 @@
 									<p><b>Оператор </b>
 										<b style="color:rgba(9, 9, 9, 0.29)">(8AM to 10PM):</b> +380502232658 </p>
 									</div>
+
 <div class="social-icons">
 	<ul class="nomargin">
 		<a href="#"><i class="fa fa-facebook-square fa-3x social-fb" id="social"></i></a>
@@ -123,8 +115,7 @@
 </ul>
 </div>
 </div>
-</div>
-<!-- </footer> -->
+
 <!--header-->
 <div class="footer-bottom">
 	<div class="container">
@@ -134,16 +125,13 @@
 					© 2017 Усі права захищені
 					</div>
 					</div>
-				</div>
-				</div>
+					</div>
+					</div>
+					</div>
+					</div>
+					</div>
+
 </footer>
-
-
-
-
-
-
-
 									<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 									<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 									<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
