--- a/index.html
+++ b/index.html
@@ -41,15 +41,20 @@
 	</header>
 	<footer class="footer1">
 		<div class="container">
-			<div class="row align-items-end">
+
+			<div class="row">
 				<!-- row -->
+
 				<div class="col-lg-3 col-md-3">
 					<!-- widgets column left -->
 					<ul class="list-unstyled clear-margins">
 						<!-- widgets -->
+
 						<li class="widget-container widget_nav_menu">
 							<!-- widgets list -->
+
 							<h1 class="title-widget">Каталог</h1>
+
 							<ul>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Головні убори</a></li>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Аксесуари</a></li>
@@ -61,13 +66,17 @@
 					</ul>
 				</div>
 
+
 				<div class="col-lg-3 col-md-3">
 					<!-- widgets column left -->
 					<ul class="list-unstyled clear-margins">
 						<!-- widgets -->
+
 						<li class="widget-container widget_nav_menu">
 							<!-- widgets list -->
+
 							<h1 class="title-widget">Про нас</h1>
+
 							<ul>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Магазин</a></li>
 								<li><a href="#"><i class="fa fa-angle-double-right"></i> Модницям</a></li>
@@ -105,7 +114,6 @@
 				</div>
 			</div>
 		</div>
-		<!--header-->
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
@@ -118,6 +126,16 @@
 			</div>
 		</div>
 	</footer>
+	<!--header-->
+
+
+
+
+
+
+
+
+
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
