--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </div>
 </div>
 </div>
-</footer>
+<!-- </footer> -->
 <!--header-->
 <div class="footer-bottom">
 	<div class="container">
@@ -128,7 +128,7 @@
 					</div>
 </div>
 </div>
-
+</footer>
 
 
 
