--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
-<body>
+<body class="container">
 	<header class="container">
 		<nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="background-color: rgba(223, 77, 156, 0.0)">
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,10 @@
 
 		</nav>
 	</header>
-	<footer class="footer1">
+		<div class="ddd">
+			fff
+		</div>
+	<footer class="row">
 		<div class="container">
 
 			<div class="row">
@@ -126,16 +129,6 @@
 			</div>
 		</div>
 	</footer>
-	<!--header-->
-
-
-
-
-
-
-
-
-
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
