--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<header class="container">
+	<header class="container-fluid">
 		<nav class="navbar navbar-expand-md navbar-light">
 			<div class="navbar-brand">
 				<a href="#">UA</a>
@@ -34,41 +34,39 @@
 					<a class="nav-item nav-link text-dark" href="#">Контакти</a>
 				</div>
 				<div class="navbar-nav ml-auto">
-					<a class="nav-item nav-link text-dark" href="#">Сподобалось</a>
 					<a class="nav-item nav-link text-dark" href="#">Увійти</a>
 				</div>
 			</div>
 		</nav>
-		<div class="container">
-			<div class="row">
+		<div class="container-fluid">
+			<div class="row justify-content-center">
 				<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
 					<img src="img/icon.png" alt="">
 				</div>
-				<div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-8 align-self-center order-2 order-md-2 bloc2">
-					<div class="input-group">
+				<div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-12 align-self-center order-2 order-md-2 bloc2">
+					<div class="input-group serch_main">
 						<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
 						<span class="input-group-btn">
-						<button class="btn btn-secondary" type="button">Пошук</button>
-					</span>
+							<button class="btn btn-secondary" type="button">Пошук</button>
+						</span>
 					</div>
 				</div>
-				<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 order-3 order-md-3 text-center heart">
+				<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
 					<span class="badge badge-success">3</span>
-					<img class="img-fluid" src="img/heart.png" alt="" href="#">
+					<img class="img-fluid" src="img/heart.png" alt="" href="#" >
 					<p>Сподобалось</p>
 				</div>
-				<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-2 order-4 order-md-4 text-center cart">
+				<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 text-center cart">
 					<span class="badge badge-success">1</span>
 					<img class="img-fluid" src="img/cart.png" alt="" href="#">
 					<p>Корзина</p>
 				</div>
 			</div>
-			<script type="text/javascript">
-			</script>
 		</div>
 	</header>
+	<div class="ww"></div>
 	<footer>
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-4 col-lg-3 widget_nav_menu">
 					<p class="title-widget text-center">Каталог</p>
@@ -89,22 +87,22 @@
 						<li><a href="#">Контакти</a></li>
 					</ul>
 				</div>
-				<!-- visibel -->
-				<div class="col-4 col-lg-3">
-					<p class="title-widget text-center">Контакти </p>
-					<div class="footerp">
-						<p>Email : <a href="mailto:mail@gmail.com">mail@gmail.com</a></p>
-						<p>Оператор +380502232658 </p>
+
+				<div class="col-4 col-lg-3 ">
+					<p class="title-widget">Контакти </p>
+					<div class="contact">
+						Email: mail@gmail.com
+						Оператор +380502232658
 					</div>
 				</div>
 			</div>
-			<div class="text-center footer-bottom ">
-					© 2017 Усі права захищені
-			</div>
 		</div>
+		<div class="bottom">
+			
+			<p>	© 2017 Усі права захищені</p>
 
+		</div>
 	</footer>
-
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
