--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header class="container-fluid">
 		<nav class="navbar navbar-expand-md navbar-light">
 			<div class="navbar-brand">
-				<a href="#">UA</a>
+				<a href="index.html">UA</a>
 				<a href="#">RU</a>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,17 @@
 			</div>
 		</div>
 	</header>
-	<div class="ww"></div>
+	<content>
+		<div class="con">1</div>
+		<div class="con">2</div>
+		<div class="con">3</div>
+		<div class="con">4</div>
+		<div class="con">5</div>
+		<div class="con">6</div>
+		<div class="con">7</div>
+		<div class="con">8</div>
+		<div class="con">9</div>
+	</content>
 	<footer>
 		<div class="container">
 			<div class="row justify-content-center">
@@ -98,9 +108,7 @@
 			</div>
 		</div>
 		<div class="bottom">
-			
 			<p>	© 2017 Усі права захищені</p>
-
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
