add_content_all

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<a href="index.html">UA</a>
 				<a href="#">RU</a>
 			</div>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-		</button>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" 	aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
 					<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
@@ -65,15 +65,85 @@
 		</div>
 	</header>
 	<content>
-		<div class="con">1</div>
-		<div class="con">2</div>
-		<div class="con">3</div>
-		<div class="con">4</div>
-		<div class="con">5</div>
-		<div class="con">6</div>
-		<div class="con">7</div>
-		<div class="con">8</div>
-		<div class="con">9</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+
 	</content>
 	<footer>
 		<div class="container">
@@ -97,12 +167,11 @@
 						<li><a href="#">Контакти</a></li>
 					</ul>
 				</div>
-
 				<div class="col-4 col-lg-3 ">
 					<p class="title-widget">Контакти </p>
 					<div class="contact">
-						Email: mail@gmail.com
-						Оператор +380502232658
+						<p>Email: mail@gmail.com</p>
+						<p>Оператор +380502232658</p>
 					</div>
 				</div>
 			</div>
